apply naming conventions to all templates (#35)
* add infrastructure/vpc-env-hosted-zone template

* add services/webapp/webapp template

* update template details table

* update webapp template

* update readme

* update to StackName in outputs

* restrict available methods in cloudfront

* update templates

* update Route53Record in jenkins

* fix type on description

--- a/environments/colors/services/webapp.json
+++ b/environments/colors/services/webapp.json
@@ -1,7 +1,7 @@
 [
   {
     "ParameterKey": "ParentZoneStack",
-    "ParameterValue": "green-hosted-zone"
+    "ParameterValue": "yellow-hosted-zone"
   },
   {
     "ParameterKey": "Subdomain",
